--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_onboarding_slider: ^1.0.8
+  splash_screen_view: ^3.0.0
+  introduction_slider: ^2.0.1
+  page_transition: ^2.0.9
+  animated_splash_screen: ^1.3.0
+
 
 dev_dependencies:
   flutter_test:
