--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   introduction_slider: ^2.0.1
   page_transition: ^2.0.9
   animated_splash_screen: ^1.3.0
+  hexcolor: ^3.0.1
 
 
 dev_dependencies:
@@ -81,12 +82,12 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
- # fonts:
-  # - family: Roboto
-   #  fonts:
-   #   - asset: assets/fonts/Roboto-Regular.tff
-    #  - asset: assets/fonts/Roboto-Medium.tff
-    #  - asset: assets/fonts/Roboto-Bold.tff
+  fonts:
+   - family: Roboto
+     fonts:
+      - asset: assets/fonts/Roboto-Regular.tff
+      - asset: assets/fonts/Roboto-Medium.tff
+      - asset: assets/fonts/Roboto-Bold.tff
 
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
