--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,11 +83,11 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-   - family: Roboto
-     fonts:
-      - asset: assets/fonts/Roboto-Regular.tff
-      - asset: assets/fonts/Roboto-Medium.tff
-      - asset: assets/fonts/Roboto-Bold.tff
+    - family: Roboto,Schuyler
+      fonts:
+        - asset: assets/fonts/Roboto-Regular.ttf
+        - asset: assets/fonts/Roboto-Medium.ttf
+        - asset: assets/fonts/Roboto-Bold.ttf
 
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
